# rua

./: .editorconfig  .prettierignore  AGENTS.md  CLAUDE.md  README.md  RUACTL.md  bump-version.sh  components.json  install-ruactl.sh  justfile  package.json  pnpm-lock.yaml  qwe.json  tailwind.config.ts  uno.config.ts  vite.config.ts
.github/workflows/: linux.yaml
apps/docs/: README.md  mdx-components.tsx  package.json  source.config.ts  tailwind.config.ts  typedoc.json
apps/rua/: components.json  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/rua/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
apps/rua/src-tauri/capabilities/: default.json
apps/rua/src-tauri/src/: AGENTS.md  applications.rs  control_server.rs  extension_storage.rs  extensions.rs  file_search.rs  file_watcher.rs  fs_api.rs  lib.rs  main.rs  notification.rs  preferences.rs  proxy.rs  settigns_view.rs  shell_executor.rs  system_tray.rs  types.rs  webpage_info.rs
apps/rua/src-tauri/src/extension/: extension_storage.rs  extensions.rs  mod.rs
apps/rua/src-tauri/src/linux/: applications.rs  clipboard.rs  control_server.rs  display_server.rs  hyprland.rs  mod.rs  notification.rs  shell_executor.rs  x11_window.rs
apps/rua/src-tauri/src/not_linux/: applications.rs  clipboard.rs  control_server.rs  mod.rs  notification.rs  shell_executor.rs
docs/: dynamic-action-icons.md  extension-development.md
examples/hello-ext/: README.md  goodbye.js  index.html  init.js  manifest.json
examples/hello-word/: README.md  index.html  manifest.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+252 files in other folders)
