[package]
name = "rua"
version = "0.4.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "rua"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[[bin]]
name = "ruactl"
path = "src/bin/ruactl.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
webpage = "2"
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = "0.4"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"
urlencoding = "2.1"
base64 = "0.22"
zip = "2.2"
glob = "0.3"
regex = "1"

[target."cfg(target_os = \"linux\")".dependencies]
freedesktop-desktop-entry = "0.5"
walkdir = "2"
which = "5.0"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
